fsm w backup data

--- a/notebooks/exploratory/EDA1.ipynb
+++ b/notebooks/exploratory/EDA1.ipynb
@@ -41,7 +41,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder"
+   ]
   },
   {
    "cell_type": "markdown",
