--- a/notebooks/final/final.ipynb
+++ b/notebooks/final/final.ipynb
@@ -8,6 +8,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "who are the stakeholders?\n",
+    "\n",
+    "Covid-19 has pushed many business online that may have not had a strong online presence. Pivoting\n",
+    "\n",
+    "write about e-commerce impact from recommendations.\n",
+    "\n",
+    "Book-recommender system is a proof of concept to encourage the new busnisses that have launched online to incorporate a rating and recommender system.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Understanding\n",
+    "\n",
+    "In this section you will find...\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obtaining the Data\n",
+    "\n",
+    "Explain web-scrapping process for reproducibility.\n",
+    "\n",
+    "Where to find the functions, how to do it. why did it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Properties\n",
+    "\n",
+    "How relates to the real world problem.\n",
+    "\n",
+    "explain what features the dataset has, which ones will be used for this phase of the project. \n",
+    "\n",
+    "Write about how want to have a good recommendation because want customers to trust the recommendation system so that they continue to use it in the future. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation and Exploratory Data Analysis\n",
+    "\n",
+    "In this section you will find..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Libraries\n",
+    "\n",
+    "The following cell has the libraries needed to perform the operations in this notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Dataset\n",
+    "\n",
+    "As mentioned in the previous section, this dataset is a combination of the multiple tables that were exported during the web scrapping process. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inspect Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Preprocessing\n",
+    "\n",
+    "Because my scrapper took reviews based on books found on a specific genre's page, there were duplicates between the book ratings because they may have been classified under multiple genres--such as one book falling into fiction, historical fiction, and history genres.\n",
+    "\n",
+    "During the data cleaning process I:\n",
+    "- combined the multiple genre book and reviews table to make one combined data frame\n",
+    "- took out the duplicate data left by the scrapping\n",
+    "- removed extraneous text\n",
+    "- removed text in mixed data type columns, such as the word \"pages\" from the pages columns so that column could be an integer data type\n",
+    "\n",
+    "\n",
+    "EXPLAIN REASONING BEHIND EACH DECISION."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling\n",
+    "\n",
+    "During the modeling process...\n",
+    "\n",
+    "EXPLAIN pyspark ALS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation\n",
+    "\n",
+    "Cross validation is....\n",
+    "\n",
+    "in the context of the project it means..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
