adding to fnotebook

--- a/notebooks/exploratory/EDA2_spark-Copy1.ipynb
+++ b/notebooks/exploratory/EDA2_spark-Copy1.ipynb
@@ -431,8 +431,8 @@
    ],
    "source": [
     "\n",
-    "print(\"The book with the fewest ratings: \")\n",
-    "out3.groupBy(\"book_unique_key\").count().select(min(\"count\")).show()\n",
+    "# print(\"The book with the fewest ratings: \")\n",
+    "# out3.groupBy(\"book_unique_key\").count().select(min(\"count\")).show()\n",
     "\n",
     "# print(\"Avg num ratings per book: \")\n",
     "# out3.groupBy(\"book_unique_key\").count().select(avg(\"count\")).show()\n",
