--- a/notebooks/exploratory/EDA_pandas.ipynb
+++ b/notebooks/exploratory/EDA_pandas.ipynb
@@ -320,12 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1065,8 +1060,8 @@
     }
    ],
    "source": [
-    "sorted_df = comb_df.sort_values('review_text')\n",
-    "sorted_df"
+    "# sorted_df = comb_df.sort_values('review_text')\n",
+    "# sorted_df"
    ]
   },
   {
@@ -1399,8 +1394,8 @@
     }
    ],
    "source": [
-    "duplicates= comb_df.loc[comb_df.duplicated(subset= ['review_text'],keep=False), : ]\n",
-    "duplicates"
+    "# duplicates= comb_df.loc[comb_df.duplicated(subset= ['review_text'],keep=False), : ]\n",
+    "# duplicates"
    ]
   },
   {
