troubleshooting java errors

--- a/notebooks/exploratory/EDA2_spark-Copy1.ipynb
+++ b/notebooks/exploratory/EDA2_spark-Copy1.ipynb
@@ -876,7 +876,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "Py4JJavaError",
