--- a/notebooks/final/final_2.ipynb
+++ b/notebooks/final/final_2.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Overview\n",
-    "******"
+    "## Project Overview"
    ]
   },
   {
@@ -31,11 +30,12 @@
    "source": [
     "## Business Understanding\n",
     "\n",
-    "How can reviews improve sales? How are our customers making choices on what items to buy? Choice is the act of picking or deciding between two or more possibilities. But how about when there are sometimes hundreds of thousands of possibilities? From Amazon to Netflix to Yelp, we have seen businesses capitalize and address this choice overload by providing recommendations to their customers.\n",
+    "How can reviews improve sales? How are our customers making choices on what items to buy? \n",
+    "Choice is the act of picking or deciding between two or more possibilities. \n",
+    "But how about when there are sometimes hundreds of thousands of possibilities? From Amazon to Netflix to Yelp, we have seen businesses capitalize and address this choice overload by providing recommendations to their customers.\n",
     "\n",
-    "The Covid-19 pandemic has shown a pivot by businesses of all sizes across many industries.Many did not have a website before, but now do. Businesses have pivoted to include e-commerce. \n",
+    "The Covid-19 pandemic has shown a pivot by businesses of all sizes across many industries. When local farmers stoped making deliveries to local restaurants that were shut down during shelter in place and grocery stores were being emptied out by panicked consumers, the farmers saw an opening. They set up systems to deliver to homes rather than restaurants. Many did not have a website before, but now do. Businesses have pivoted to include e-commerce. For example, this [local farmer](https://martinsfarmtotable.com/about/) writes \"When the pandemic lockdowns hit, I decided to sell direct to you, the home cook. And you, in this precarious moment in time, need to have good, healthy ingredients to make food at home. **My goal is to both keep my farm alive and nourish you and your community**.\"  And according to the [Harvard Business Review(HBR)](https://hbr.org/2020/07/how-businesses-have-successfully-pivoted-during-the-pandemic), this is one of the successful conditions of a business pivot--\"Pivoting is a lateral move that creates enough value for the customer and the firm to share.\" This farmer is providing something that the consumer needs(fresh food), in a way that will keep their buisness going. They are providing this service by making it easier on the consumer, as well as themselves to track orders, by building an online ordering service. This is just one example.  What are the consequences for operating in \"business as usual\" terms in a new normal?  HBR tells us that, \"it does weed out business models that fail to pivot toward the new reality.\" Not only during pandemics, but business models are having to adapt and change to different realities as they grow, as time changes.\n",
     "\n",
-    "According to the [Harvard Business Review(HBR)](https://hbr.org/2020/07/how-businesses-have-successfully-pivoted-during-the-pandemic), one of the successful conditions of a business pivot--\"pivoting is a lateral move that creates enough value for the customer and the firm to share.\" What are the consequences for operating in \"business as usual\" terms in a new normal?  HBR tells us that, \"it does weed out business models that fail to pivot toward the new reality.\" Not only during pandemics, but business models are having to adapt and change to different realities as they grow, as time changes.\n",
     "\n",
     "[Michael Schrage](http://ide.mit.edu/about-us/people/michael-schrage), visiting fellow at the MIT Sloan School of Management’s Initiative on the Digital Economy, book is quoted in [Strategy+Business magazine](https://www.strategy-business.com/article/What-people-like-you-like?gko=d2e94) as saying that about **30% of e-commerce revenues around the world come from recommendations.**  \n",
     "\n"
@@ -46,7 +46,6 @@
    "metadata": {},
    "source": [
     "## Data Understanding\n",
-    "******\n",
     "\n",
     "In this section I go through how to obtain the data, what features are in the dataset, and why these are important for the business problem.\n",
     "\n",
@@ -59,9 +58,9 @@
    "source": [
     "#### Obtaining the Data\n",
     "\n",
-    "See data/scrape/final/scraping.ipynb for the functions and code used to scrape the data.\n",
+    "See data/scrape/final/scrapping.ipynb for the functions and code used to scrape the data.\n",
     "\n",
-    "I opted for scraping the data because the datasets available with similar data were oudated and did not have features such as text reviews, page length, or genre-- features that I wanted to have available for a phase 2 of this project which includes content based filtering. \n",
+    "I opted for scrapping the data because the datasets available with similar data were oudated and did not have features such as text reviews, page length, or genre-- features that I wanted to have available for a phase 2 of this project which includes content based filtering. \n",
     "\n",
     "I was not able to use the Goodreads API because they did not provide one that enabled me to get the data that I needed--books connected to individual ratings, the ratings in the APIs availalble were aggregates.\n"
    ]
@@ -72,11 +71,7 @@
    "source": [
     "#### Data Properties\n",
     "\n",
-    "As mentioned above, the dataset set includes several features including book title, author name, page length, ratings, users, and text ratings.  For the purposes of this phase 1 of the project, the focus will be on:\n",
-    "\n",
-    "- book\n",
-    "- user\n",
-    "- rating\n",
+    "As mentioned above, the dataset set includes several features including book title, author name, page length, ratings, users, and text ratings.  For the purposes of this phase 1 of the project, the focus will be on book, user, and rating.\n",
     "\n",
     "Book and user id's were strings that will be converted into numerical form, rating is already in integer type.\n",
     "\n",
@@ -88,8 +83,6 @@
    "metadata": {},
    "source": [
     "## Data Preparation\n",
-    "\n",
-    "******\n",
     "\n",
     "In this section I share some of the process that I went through to prepare the data and the libraries used for the rest of the notebook."
    ]
@@ -149,7 +142,7 @@
    "source": [
     "#### Import Dataset\n",
     "\n",
-    "As mentioned in the previous section, this dataset is a combination of the multiple tables that were exported during the web scraping process. "
+    "As mentioned in the previous section, this dataset is a combination of the multiple tables that were exported during the web scrapping process. "
    ]
   },
   {
@@ -503,21 +496,13 @@
    "source": [
     "#### Data Preprocessing\n",
     "\n",
-    "Because my scraper took reviews based on books found on a specific genre's page, there were duplicates between the book ratings because they may have been classified under multiple genres--such as one book falling into fiction, historical fiction, and history genres.\n",
+    "Because my scrapper took reviews based on books found on a specific genre's page, there were duplicates between the book ratings because they may have been classified under multiple genres--such as one book falling into fiction, historical fiction, and history genres.\n",
     "\n",
     "During the data cleaning process I:\n",
     "- combined the multiple genre book and reviews table to make one combined data frame (see notebooks/exploratory/merge_tables.ipynb for merging multiple tables into one dataset)\n",
-    "- took out the duplicate data left by the scraping\n",
+    "- took out the duplicate data left by the scrapping\n",
     "- removed extraneous text\n",
     "- removed text in mixed data type columns, such as the word \"pages\" from the pages columns so that column could be an integer data type"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### USING LABEL ENCODER BECAUSE\n",
-    "\n"
    ]
   },
   {
@@ -1571,7 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### From the summary above we see that are some missing values in some of the columns. For this stage of the project, it is fine to leave them as is. For this first phase I am interested in having a book_unique_key and number_of_stars that are not empty. If I were to remove the empty rows based on null values in book_description and review_text, I would lose rows with valid data for this first phase.  Removing these missing values can be done during the second phase of the project when more data is added to the overall dataset."
+    "##### From the summary above we see that are some missing values in some of the columns. For this stage of the project, it is fine to leave them as is. For this first phase I am intersted in having a book_unique_key and number_of_stars that are not empty. If I were to remove the empty rows based on null values in book_description and review_text, I would lose rows wit valid data for this first phase.  Removing these missing values can be done during the second phase of the project when more data is added to the overall dataset."
    ]
   },
   {
@@ -1654,16 +1639,11 @@
    "source": [
     "# set a schema to let spark know what data types to import the columns as from the csv\n",
     "\n",
-    "schema = StructType([StructField(\"genre\", StringType(), True),\n",
-    "                     StructField(\"title\", StringType(), True), \n",
-    "                     StructField(\"author\", StringType(), True), \n",
-    "                     StructField(\"pages\", IntegerType(), True), \n",
-    "                     StructField(\"average_rating\", FloatType(), True), \n",
-    "                     StructField(\"book_description\", StringType(), True), \n",
-    "                     StructField(\"user_unique_key\", IntegerType(), True),\n",
-    "                     StructField(\"number_of_stars\", IntegerType(), True), \n",
-    "                     StructField(\"book_unique_key\", IntegerType(), True), \n",
-    "                     StructField(\"review_text\", StringType(), True)])\n",
+    "schema = StructType([StructField(\"genre\", StringType(), True),StructField(\"title\", StringType(), True), \n",
+    "                     StructField(\"author\", StringType(), True), StructField(\"pages\", IntegerType(), True), \n",
+    "                     StructField(\"average_rating\", FloatType(), True), StructField(\"book_description\", StringType(), True), \n",
+    "                     StructField(\"user_unique_key\", IntegerType(), True),StructField(\"number_of_stars\", IntegerType(), True), \n",
+    "                     StructField(\"book_unique_key\", IntegerType(), True), StructField(\"review_text\", StringType(), True)])\n",
     "\n",
     "df_sp = spark.createDataFrame(df_pd, schema=schema)"
    ]
@@ -1697,13 +1677,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Spark's ALS works well with sparce matrices"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1717,6 +1690,7 @@
     }
    ],
    "source": [
+    "# spark's ALS works well with sparce matrices\n",
     "# checking sparcity\n",
     "\n",
     "stars_num= df_sp.select(\"number_of_stars\").count()\n",
@@ -1737,10 +1711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### First Simple Model(FSM)\n",
-    "\n",
-    "- split dataset into 80 % train, and 20% test\n",
-    "- there are no x/y splits because ALS needs to see the whole matrix to learn and fill in the missing values"
+    "#### First Simple Model(FSM)"
    ]
   },
   {
@@ -1749,6 +1720,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# split dataset into 80 % train, and 20% test\n",
+    "# there are no x/y splits because ALS needs to see the whole matrix to learn and fill in the missing values\n",
+    "\n",
     "train, test = df_sp.randomSplit([0.8, 0.2], seed= 2020)"
    ]
   },
@@ -1773,15 +1747,6 @@
    "outputs": [],
    "source": [
     "predictions = model_fsm.transform(test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### RMSE and MAE--evaluation metrics\n",
-    "\n",
-    "The Root Mean Squared Error (RMSE) and the Mean Absolute Error (MAE) are evaluation metrics.\n"
    ]
   },
   {
