--- a/notebooks/final/final_2.ipynb
+++ b/notebooks/final/final_2.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,6 +2198,36 @@
     "mae_best = mae_evaluator.evaluate(predictions_best)\n",
     "print('The MAE for Model 5 is = ' + str(mae_best))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_rating =\n",
+    "recommended=\n",
+    "print(\"User #25 Ratings:\")\n",
+    "origin_ratings.filter(col(\"user_unique_key\") == 60).sort(\"number_of_stars\", ascending= False).show()\n",
+    "\n",
+    "\n",
+    "print(\"User 300 Recommendations:\")\n",
+    "recommended.filter(col(\"user_unique_key\") == 300).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
