add rmse justification

--- a/notebooks/final/final.ipynb
+++ b/notebooks/final/final.ipynb
@@ -57,6 +57,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Reproducing environment\n",
+    "\n",
+    "This model was built using the following:\n",
+    "\n",
+    "* Operating system: iOS Catalina 10.15.4\n",
+    "* Python: 3.6.9\n",
+    "* PySpark: 2.4.4\n",
+    "    \n",
+    "See the main ReadMe for link on how to install the .yml file included in the repository.\n",
+    "\n",
+    "See data preparation below for further instructions on PySpark.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Obtaining the Data\n",
     "\n",
     "See data/scrape/final/scraping.ipynb for the functions and code used to scrape the data.\n",
@@ -120,6 +137,16 @@
     "import os\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you need to install PySpark, uncomment and run the next line\n",
+    "# pip install pyspark"
    ]
   },
   {
@@ -1523,14 +1550,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Below I remove ratings with \"0\" stars because these represent readers who wrote a review but did not give it a rating. For the moment, I am only interested in readers who gave it a rating. Ratings are from 1-5 stars."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove ratings with \"0\" stars because these represent readers who wrote a review but did not give it a rating.\n",
-    "# for the moment, we are only interested in readers who gave it a rating. Ratings are from 1-5 stars.\n",
-    "\n",
     "comb_df8= comb_df7[comb_df7.number_of_stars != 0]"
    ]
   },
@@ -1606,15 +1637,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Next I save the cleaned data to import it into a Spark dataframe for modeling. I could use dataframe without saving to external csv, but I wanted to save a copy of clean data for future processing.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving cleaned data to import it into a spark dataframe for modeling\n",
-    "# could use dataframe without saving to external csv, but I wanted to save a copy of clean data for future processing\n",
-    "\n",
-    "comb_df8.to_csv('../../data/final/comb_df_clean.csv', index=False)\n"
+    "comb_df8.to_csv('../../data/final/comb_df_clean.csv', index=False)"
    ]
   },
   {
@@ -1631,6 +1666,7 @@
    "outputs": [],
    "source": [
     "# initiate a spark session\n",
+    "# setting spark session to run on all(*) available cores locally\n",
     "\n",
     "spark = SparkSession.builder.master('local[*]').appName('capstone').getOrCreate()"
    ]
@@ -1700,7 +1736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Spark's ALS works well with sparce matrices"
+    "##### Spark's ALS works well with sparse matrices"
    ]
   },
   {
@@ -1740,7 +1776,8 @@
     "#### First Simple Model(FSM)\n",
     "\n",
     "- split dataset into 80 % train, and 20% test\n",
-    "- there are no x/y splits because ALS needs to see the whole matrix to learn and fill in the missing values"
+    "- there are no x/y splits because ALS needs to see the whole matrix to learn and fill in the missing values\n",
+    "- including seed=2020 for reproducibility"
    ]
   },
   {
@@ -1781,7 +1818,7 @@
    "source": [
     "##### RMSE and MAE--evaluation metrics\n",
     "\n",
-    "The Root Mean Squared Error (RMSE) and the Mean Absolute Error (MAE) are evaluation metrics.\n"
+    "The Root Mean Squared Error (RMSE) and the Mean Absolute Error (MAE) are evaluation metrics. While both metrics measure how far the prediction is from the actual, RMSE has a higher error penalization. I use both throughout to see how they compare with the different models. For book recommendation, it is not as important to give errors higher penalizations because the outcome of erroring is not as bas as it might be in a medical situation, for example. However, I have decided to use RMSE as my measurement metric for this project anyways because the best model, as will be seen below, has an RMSE and a MAE close to 1.  Though the MAE does give a lower error measurement for the model, I prefered to stick with RMSE because it does punish errors more harshly and in the end I think building a model around this metric will be more robust for future deployment.  \n"
    ]
   },
   {
