--- a/notebooks/final/final.ipynb
+++ b/notebooks/final/final.ipynb
@@ -38,6 +38,8 @@
     "According to the [Harvard Business Review(HBR)](https://hbr.org/2020/07/how-businesses-have-successfully-pivoted-during-the-pandemic), one of the successful conditions of a business pivot--\"pivoting is a lateral move that creates enough value for the customer and the firm to share.\" What are the consequences for operating in \"business as usual\" terms in a new normal?  HBR tells us that, \"it does weed out business models that fail to pivot toward the new reality.\" Not only during pandemics, but business models are having to adapt and change to different realities as they grow, as time changes.\n",
     "\n",
     "[Michael Schrage](http://ide.mit.edu/about-us/people/michael-schrage), visiting fellow at the MIT Sloan School of Management’s Initiative on the Digital Economy, book is quoted in [Strategy+Business magazine](https://www.strategy-business.com/article/What-people-like-you-like?gko=d2e94) as saying that about **30% of e-commerce revenues around the world come from recommendations.**  \n",
+    "\n",
+    "This book recommendation system can be a tool that could be used by bookstores and booksellers who find themselves depending on e-commerce now more than ever.\n",
     "\n"
    ]
   },
@@ -97,7 +99,7 @@
     "\n",
     "Book and user id's were strings that will be converted into numerical form, rating is already in integer type.\n",
     "\n",
-    "Having an accurate recommendation system will be important because want customers to trust the recommendation system so that they continue to use it in the future. "
+    "Having an accurate recommendation system will be important because we want customers to trust the recommendation system so that they continue to use it in the future. "
    ]
   },
   {
@@ -537,14 +539,6 @@
     "- took out the duplicate data left by the scraping\n",
     "- removed extraneous text\n",
     "- removed text in mixed data type columns, such as the word \"pages\" from the pages columns so that column could be an integer data type"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### USING LABEL ENCODER BECAUSE\n",
-    "\n"
    ]
   },
   {
@@ -1656,7 +1650,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modeling"
+    "## Modeling\n",
+    "\n",
+    "In this section I will use Spark's Alternating Least Squares to train a model to predict what a customer will rate a book. Goal here is to get a low error metric so as to be the most accurate possible in predicting the rating from a customer on a book.\n",
+    "\n",
+    "Begin by initiating a Spark session and setting Spark session to run on all available cores locally (marked by asterisk)."
    ]
   },
   {
@@ -1665,9 +1663,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initiate a spark session\n",
-    "# setting spark session to run on all(*) available cores locally\n",
-    "\n",
     "spark = SparkSession.builder.master('local[*]').appName('capstone').getOrCreate()"
    ]
   },
@@ -1683,12 +1678,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, I set a schema to let spark know what data types to import the columns as from the csv."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set a schema to let spark know what data types to import the columns as from the csv\n",
     "\n",
     "schema = StructType([StructField(\"genre\", StringType(), True),\n",
     "                     StructField(\"title\", StringType(), True), \n",
@@ -1875,7 +1876,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.5 RMSE is high.  For the next model, I am adding some additional parameters.  In the FSM, the default maxIter and rank is 10. So for this next model, I want to test numbers under 10 for both. "
+    "1.5 RMSE is high.  For the next model, I am adding some additional parameters.  In the FSM, the default maxIter and rank is 10. So for this next model, I want to test numbers under 10 for both. \n",
+    "\n",
+    "- maxIter: this specifies the maximum number of iterations\n",
+    "- rank: number of latent factors in model\n",
+    "- regParam: this is the regularization parameter (penalty on the cost function as fitting increases)"
    ]
   },
   {
@@ -2100,7 +2105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rather than continuing to iterate on this model by tesing with the hyperparameters by hand, I use spark's parameter grid builder to test out different parameters and cross validation to test the best model."
+    "Rather than continuing to iterate on this model by testing and changing the hyperparameters by hand, I use Spark's parameter grid builder to test out different parameters and use cross validation to test the best model."
    ]
   },
   {
